--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,7 +10,7 @@ environment:
 
 dependencies:
   firebase_core: any
-  firebase_remote_config: ">=0.9.0-dev.0 <2.0.0"
+  firebase_remote_config: ">=0.9.0-dev.0"
   flutter:
     sdk: flutter
 
